samples/_failures_safe/1761505241_e1be56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9e8ff6f.c: In function ‘main’:
./samples/SAFE/__tmp_c9e8ff6f.c:170:13: error: expected expression at end of input
  170 |             printf("Token %d: %s\n", j +
      |             ^~~~~~
./samples/SAFE/__tmp_c9e8ff6f.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9e8ff6f.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9e8ff6f.c:170:13: error: expected declaration or statement at end of input
